--- a/package.json
+++ b/package.json
@@ -21,10 +21,14 @@
     "expo-linking": "^8.0.11",
     "expo-router": "^6.0.23",
     "expo-status-bar": "~3.0.9",
-    "react": "19.2.4",
-    "react-native": "0.81.5",
-    "react-native-mmkv": "^4.1.2",
-    "react-native-reanimated": "^4.2.1",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.76.6",
+    "react-native-web": "~0.19.13",
+    "react-native-mmkv": "^3.3.1",
+    "react-native-reanimated": "~3.16.6",
+    "react-native-safe-area-context": "4.14.0",
+    "react-native-screens": "~4.4.0",
     "react-native-svg": "^15.15.3",
     "zod": "^4.3.6",
     "zustand": "^5.0.11"
