--- a/package.json
+++ b/package.json
@@ -19,17 +19,20 @@
     "expo-av": "^16.0.8",
     "expo-constants": "^18.0.13",
     "expo-linking": "^8.0.11",
+    "expo-localization": "^17.0.8",
     "expo-router": "^6.0.23",
     "expo-status-bar": "~3.0.9",
+    "i18next": "^25.8.9",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-i18next": "^16.5.4",
     "react-native": "0.76.6",
-    "react-native-web": "~0.19.13",
     "react-native-mmkv": "^3.3.1",
     "react-native-reanimated": "~3.16.6",
     "react-native-safe-area-context": "4.14.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "^15.15.3",
+    "react-native-web": "~0.19.13",
     "zod": "^4.3.6",
     "zustand": "^5.0.11"
   },
