--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "lint": "biome check ./src",
     "lint:fix": "biome check --fix ./src",
     "format": "biome format --write ./src",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "@react-native-community/datetimepicker": "^8.6.0",
@@ -42,7 +45,10 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^2.4.0",
+    "@types/jest": "^29.5.14",
     "@types/react": "~19.1.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.5",
     "typescript": "~5.9.2"
   },
   "private": true
